2006-04-21  Simon Zheng  <simon.zheng@sun.com>

	Fix for bug #337604
	* printing/e-contact-print.c: (e_contact_print_response):
	Should destory the print dialog window after clicking Print
	Preview button.

2006-04-21  Devashish Sharma  <sdevashish@novell.com>

	Fix for Bug 333869.
	* printing/e-contact-print-types.h: Remove member letter_tabs in
	struct _EContactPrintStyle.
	* printing/e-contact-print.c (e_contact_start_new_page),
	(e_contact_get_contact_size), (e_contact_print_contact),
	(e_contact_start_new_column), (complete_sequence),
	(e_contact_build_style), (e_contact_print_response),
	(e_contact_print_preview):
	To be consistent with minicard view, remove functions and data structure 
	associated with letter tab printing.
	Patch by Simon Zheng <simon.zheng@sun.com>.

2006-04-21  Devashish Sharma  <sdevashish@novell.com>

	Fix for Bug 336713
	* gui/merging/eab-contact-merging.c: (cancelit): After selecting 
	"cancel duplicate" when pasting contacts, can't remove those
	EContactMergingLookup. Make finished_lookup() available. 
	Patch by Simon Zheng <simon.zheng@sun.com>.

2006-03-29  Li Yuan <li.yuan@sun.com>

	Fix for bug #336454
	* gui/component/addressbook-view.c:
	(source_selector_key_press_event_callback):
	we should return false if it is not a del event to make gtktreeview
	deal the rest of keys.

2006-03-10  Devashish Sharma  <sdevashish@novell.com>

	* gui/component/ldap-config.glade : ldap port numbers
	were marked for translation. Fixes 331020.

2006-03-10  Devashish Sharma  <sdevashish@novell.com>

	Fix for bug #333855
	* gui/contact-editor/e-contact-editor.c (full_name_response),
	(full_name_key_press_event), (full_name_editor_delete_event_cb),
	(full_name_clicked):
	The fullname dialog should be non-modal as well as categories dialog.
	Patch by Simon Zheng <simon.zheng@sun.com>. Made some changes to the 
	patch and committed.

2006-03-06  Devashish Sharma <sdevashish@novell.com>
